fixed spacing issues

--- a/src/assets/scss/default/_reset.scss
+++ b/src/assets/scss/default/_reset.scss
@@ -64,11 +64,13 @@ ol.list-style {
 .row {
     margin-left: -15px;
     margin-right: -15px;
-    padding-top: 32px;
     position: relative;
     >[class*="col"] {
         padding-left: 15px;
         padding-right: 15px;
+    }
+    >[class*="col-lg-4"] {
+        padding-top: 32px;
     }
     &.g-0 {
         margin-left: 0;
